array.island.Island.scala.error
Erreur de compilation :
Island:6: error: type mismatch;
 found   : Int
 required: Boolean
    if (num(n-1)>>num(n)) {
                ^